[package]
name = "plugin-payment"
version = "0.1.0"
authors = ["cheng zhang <cheng.zhang@thoughtworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reconciliation = { path = "../reconciliation" }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]
