[package]
name = "plugin-payment"
version = "0.1.0"
authors = ["cheng zhang <cheng.zhang@thoughtworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
md5 = "0.7"
chrono = "0.4"
reconciliation = { path = "../reconciliation" }
serde = { version = "1.0", features = [ "derive" ]}
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]
