[package]
name = "reconciliation"
version = "0.1.0"
authors = ["cheng zhang <cheng.zhang@thoughtworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
anyhow = "1.0"
cfg-if = "0.1"
chrono = "0.4"
libloading = "0.5"
log = "0.4"
num-bigint = { version = "0.2", features = ["serde"] }
num-traits = "0.2"
os_info = "1.2"
rayon = "1.3"
reqwest = { version = "0.10", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.6"
url = "2.1"
