[package]
name = "reconciliation"
version = "0.1.0"
authors = ["cheng zhang <cheng.zhang@thoughtworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.2"
actix-rt = "1.0"
actix-web = "2.0"
anyhow = "1.0"
cfg-if = "0.1"
chrono = { version = "0.4", features = ["serde"]}
crossbeam-channel = "0.4"
env_logger = "0.7"
libloading = "0.5"
log = "0.4"
num-bigint = { version = "0.2", features = ["serde"] }
num-traits = "0.2"
os_info = "1.2"
rayon = "1.3"
reqwest = { version = "0.10", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.6"
thiserror = "1.0"
url = "2.1"
xlsxwriter = "0.2"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["prepush-hook", "run-cargo-fmt", "run-cargo-clippy", "run-cargo-test"]